compatibilité NTV type='json'

--- a/example/example_ntv_pandas.ipynb
+++ b/example/example_ntv_pandas.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "62319579",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a556868a",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "765f0396",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "327c67a9",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6ba57f0a",
    "metadata": {},
    "outputs": [
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "7e45d94d",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a4a756e7",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ac890bcb",
    "metadata": {},
    "outputs": [
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "fe6c69cb",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "cdda0ce3",
    "metadata": {
     "scrolled": false
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "22b7a281",
    "metadata": {
     "scrolled": false
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d7eb51ea",
    "metadata": {
     "scrolled": false
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "a3565bed",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "270354b3",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1121,7 @@
        "7    10 kg  peppers  vegetable  15.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,8 +1540,8 @@
        "Coordinates:\n",
        "  * quantity  (quantity) object &#x27;1 kg&#x27; &#x27;10 kg&#x27;\n",
        "  * product   (product) object &#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;\n",
-       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-57533554-8549-493d-b35c-76e5552df8b7' class='xr-array-in' type='checkbox' checked><label for='section-57533554-8549-493d-b35c-76e5552df8b7' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
-       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-03f3c368-ca44-4e4e-93f0-f79ae8b1042b' class='xr-section-summary-in' type='checkbox'  checked><label for='section-03f3c368-ca44-4e4e-93f0-f79ae8b1042b' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-6d84354a-4bee-4400-b566-e45988c9442d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6d84354a-4bee-4400-b566-e45988c9442d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-23d46912-43cc-4edd-a749-821b7114960a' class='xr-var-data-in' type='checkbox'><label for='data-23d46912-43cc-4edd-a749-821b7114960a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-0464cba3-4ed4-4c96-abb9-84940ca87576' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0464cba3-4ed4-4c96-abb9-84940ca87576' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-25227a88-b3ca-4447-a5e1-fcee55f58961' class='xr-var-data-in' type='checkbox'><label for='data-25227a88-b3ca-4447-a5e1-fcee55f58961' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-23dea0d2-6c7f-49e7-87db-f7325e659a9f' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-23dea0d2-6c7f-49e7-87db-f7325e659a9f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-630fbe7e-411d-40c0-bca0-13861dc37192' class='xr-var-data-in' type='checkbox'><label for='data-630fbe7e-411d-40c0-bca0-13861dc37192' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-62968033-acaa-44df-b14a-27c40566e157' class='xr-section-summary-in' type='checkbox'  ><label for='section-62968033-acaa-44df-b14a-27c40566e157' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-ec5fd738-3e19-4ed9-9a92-bc40f00f8ae3' class='xr-index-data-in' type='checkbox'/><label for='index-ec5fd738-3e19-4ed9-9a92-bc40f00f8ae3' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-a177fdc1-f42b-4eaf-8aa9-a438b91d01b8' class='xr-index-data-in' type='checkbox'/><label for='index-a177fdc1-f42b-4eaf-8aa9-a438b91d01b8' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1eaa113e-8b3d-4b94-8de5-2f5a53630aa6' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-1eaa113e-8b3d-4b94-8de5-2f5a53630aa6' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-49a813f8-b238-48dc-a56c-f16ce83fa1e6' class='xr-array-in' type='checkbox' checked><label for='section-49a813f8-b238-48dc-a56c-f16ce83fa1e6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
+       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-4b31bc93-ac78-4918-86b0-f3b0a90ca35b' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4b31bc93-ac78-4918-86b0-f3b0a90ca35b' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-62fe86d5-8e5e-4ae9-aeb3-36a7ed587fc4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-62fe86d5-8e5e-4ae9-aeb3-36a7ed587fc4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-89afe992-d2ac-4dea-9eb6-8b6cbac8e7f7' class='xr-var-data-in' type='checkbox'><label for='data-89afe992-d2ac-4dea-9eb6-8b6cbac8e7f7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-1c94fb1d-9c5c-4bf7-b71c-2c6a8455b327' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1c94fb1d-9c5c-4bf7-b71c-2c6a8455b327' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f9160689-e95f-4250-8b41-77714048bd10' class='xr-var-data-in' type='checkbox'><label for='data-f9160689-e95f-4250-8b41-77714048bd10' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-ecb403b0-9ca4-4ecc-af38-40e31da35de7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ecb403b0-9ca4-4ecc-af38-40e31da35de7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0eb56884-d912-4f0f-8a96-8ccdd6017b3c' class='xr-var-data-in' type='checkbox'><label for='data-0eb56884-d912-4f0f-8a96-8ccdd6017b3c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-57220723-a236-4dd2-8de9-163952ef1475' class='xr-section-summary-in' type='checkbox'  ><label for='section-57220723-a236-4dd2-8de9-163952ef1475' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-a4e713b9-140a-4da8-9b52-fd5829cdd2ac' class='xr-index-data-in' type='checkbox'/><label for='index-a4e713b9-140a-4da8-9b52-fd5829cdd2ac' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-18336189-fdf6-4bee-b0b1-305021f0d5d3' class='xr-index-data-in' type='checkbox'/><label for='index-18336189-fdf6-4bee-b0b1-305021f0d5d3' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-391118b3-b192-45fb-be6e-41b75739651b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-391118b3-b192-45fb-be6e-41b75739651b' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'price' (quantity: 2, product: 4)>\n",
@@ -1571,7 +1571,7 @@
     "print('\\nDataFrame from the two JSON-TAB format are identical ? ', df.astype('object').equals(df_from_xar.astype('object')))\n",
     "\n",
     "print('\\nThe \"optimize\" JSON-TAB format is the image of the DataArray Xarray')\n",
-    "from observation import Sdataset\n",
+    "from tab_dataset import Sdataset\n",
     "Sdataset.ntv(json_df).setcanonorder().to_xarray(varname='price')"
    ]
   },
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "5f07553d",
    "metadata": {
     "scrolled": false
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "090ad57b",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "a878011a",
    "metadata": {},
    "outputs": [
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "fc5c1c1f",
    "metadata": {
     "scrolled": false
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "0319c881",
    "metadata": {},
    "outputs": [
