add analysis module

--- a/example/example_ntv_pandas.ipynb
+++ b/example/example_ntv_pandas.ipynb
@@ -33,7 +33,7 @@
     "        \n",
     "### References\n",
     "- [JSON-NTV specification](https://loco-philippe.github.io/ES/JSON%20semantic%20format%20(JSON-NTV).htm)\n",
-    "- [JSON-TAB specification](https://github.com/loco-philippe/NTV/blob/main/documentation/JSON-TAB-standard.pdf)\n",
+    "- [JSON-TAB specification](https://loco-philippe.github.io/ES/NTV%20tabular%20format%20(NTV-TAB).htm)\n",
     "- [JSON-NTV classes and methods](https://loco-philippe.github.io/NTV/json_ntv.html)\n",
     "\n",
     "This Notebook can also be viewed at [nbviewer](http://nbviewer.org/github/loco-philippe/ntv-pandas/tree/main/example)"
