--- a/example/example_table_pandas.ipynb
+++ b/example/example_table_pandas.ipynb
@@ -9,7 +9,7 @@
     "-------     \n",
     "The interface converts DataFrame or Series into Json TableSchema format. The interface is reversible and compatible with [TableSchema types and formats](https://specs.frictionlessdata.io/table-schema/#types-and-formats)\n",
     "\n",
-    "The interface uses the [JSON-NTV format (Named and Typed Value)](https://github.com/loco-philippe/NTV#readme) - which integrates the notion of type - and its [JSON-TAB variation for tabular data](https://github.com/loco-philippe/NTV/blob/main/documentation/JSON-TAB-standard.pdf).    \n",
+    "The interface uses the [JSON-NTV format (Named and Typed Value)](https://github.com/loco-philippe/NTV#readme) - which integrates the notion of type - and its [JSON-TAB variation for tabular data](https://loco-philippe.github.io/ES/NTV%20tabular%20format%20(NTV-TAB).htm).    \n",
     "    \n",
     "This solution allows to include all the types and formats defined in the TableSchema specification.\n",
     "\n",
