--- a/example/example_ntv_pandas.ipynb
+++ b/example/example_ntv_pandas.ipynb
@@ -234,14 +234,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{':tab': [{'index': [100, 200, 300, 400, 500, 600]},\n",
-      "          {'dates': [{'::date': ['1964-01-01', '1985-02-05', '2022-01-21']}, [1]]},\n",
-      "          {'valid': [True, False, True, True, False, True]},\n",
-      "          {'value32::int32': [12, 12, 22, 22, 32, 32]},\n",
-      "          {'::month': [1, 2, 1, 1, 2, 1]},\n",
-      "          {'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [3.0, 4.0], [5.0, 6.0]]},\n",
-      "          {'names::string': ['john', 'eric', 'judith', 'mila', 'hector', 'maria']},\n",
-      "          {'unique:year': 2021}]}\n"
+      "{':tab': {'::month': [1, 2, 1, 1, 2, 1],\n",
+      "          'coord::point': [[1.0, 2.0], [3.0, 4.0], [5.0, 6.0], [7.0, 8.0], [3.0, 4.0], [5.0, 6.0]],\n",
+      "          'dates': [{'::date': ['1964-01-01', '1985-02-05', '2022-01-21']}, [1]],\n",
+      "          'index': [100, 200, 300, 400, 500, 600],\n",
+      "          'names::string': ['john', 'eric', 'judith', 'mila', 'hector', 'maria'],\n",
+      "          'unique:year': 2021,\n",
+      "          'valid': [True, False, True, True, False, True],\n",
+      "          'value32::int32': [12, 12, 22, 22, 32, 32]}}\n"
      ]
     }
    ],
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "40d718be",
    "metadata": {},
    "outputs": [
@@ -1540,8 +1540,8 @@
        "Coordinates:\n",
        "  * quantity  (quantity) object &#x27;1 kg&#x27; &#x27;10 kg&#x27;\n",
        "  * product   (product) object &#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;\n",
-       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-49a813f8-b238-48dc-a56c-f16ce83fa1e6' class='xr-array-in' type='checkbox' checked><label for='section-49a813f8-b238-48dc-a56c-f16ce83fa1e6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
-       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-4b31bc93-ac78-4918-86b0-f3b0a90ca35b' class='xr-section-summary-in' type='checkbox'  checked><label for='section-4b31bc93-ac78-4918-86b0-f3b0a90ca35b' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-62fe86d5-8e5e-4ae9-aeb3-36a7ed587fc4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-62fe86d5-8e5e-4ae9-aeb3-36a7ed587fc4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-89afe992-d2ac-4dea-9eb6-8b6cbac8e7f7' class='xr-var-data-in' type='checkbox'><label for='data-89afe992-d2ac-4dea-9eb6-8b6cbac8e7f7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-1c94fb1d-9c5c-4bf7-b71c-2c6a8455b327' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1c94fb1d-9c5c-4bf7-b71c-2c6a8455b327' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f9160689-e95f-4250-8b41-77714048bd10' class='xr-var-data-in' type='checkbox'><label for='data-f9160689-e95f-4250-8b41-77714048bd10' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-ecb403b0-9ca4-4ecc-af38-40e31da35de7' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ecb403b0-9ca4-4ecc-af38-40e31da35de7' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0eb56884-d912-4f0f-8a96-8ccdd6017b3c' class='xr-var-data-in' type='checkbox'><label for='data-0eb56884-d912-4f0f-8a96-8ccdd6017b3c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-57220723-a236-4dd2-8de9-163952ef1475' class='xr-section-summary-in' type='checkbox'  ><label for='section-57220723-a236-4dd2-8de9-163952ef1475' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-a4e713b9-140a-4da8-9b52-fd5829cdd2ac' class='xr-index-data-in' type='checkbox'/><label for='index-a4e713b9-140a-4da8-9b52-fd5829cdd2ac' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-18336189-fdf6-4bee-b0b1-305021f0d5d3' class='xr-index-data-in' type='checkbox'/><label for='index-18336189-fdf6-4bee-b0b1-305021f0d5d3' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-391118b3-b192-45fb-be6e-41b75739651b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-391118b3-b192-45fb-be6e-41b75739651b' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "    plants    (product) object &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'price'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>quantity</span>: 2</li><li><span class='xr-has-index'>product</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-c96fa65f-93df-4f59-a913-a4f4afe0bb6a' class='xr-array-in' type='checkbox' checked><label for='section-c96fa65f-93df-4f59-a913-a4f4afe0bb6a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.5 2.0 1.0 1.5 5.0 20.0 10.0 15.0</span></div><div class='xr-array-data'><pre>array([[0.5, 2.0, 1.0, 1.5],\n",
+       "       [5.0, 20.0, 10.0, 15.0]], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-ea3ce321-cfed-43f7-a4c4-6090e3a19ff0' class='xr-section-summary-in' type='checkbox'  checked><label for='section-ea3ce321-cfed-43f7-a4c4-6090e3a19ff0' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>quantity</span></div><div class='xr-var-dims'>(quantity)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;1 kg&#x27; &#x27;10 kg&#x27;</div><input id='attrs-d78004cb-0101-418b-97f6-d05b0da50a0d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-d78004cb-0101-418b-97f6-d05b0da50a0d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-81f27f3a-c070-4607-ac46-c36ec60edb2d' class='xr-var-data-in' type='checkbox'><label for='data-81f27f3a-c070-4607-ac46-c36ec60edb2d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>product</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;banana&#x27; &#x27;orange&#x27; &#x27;apple&#x27; &#x27;peppers&#x27;</div><input id='attrs-71d1cf78-c3c7-4ac9-a6de-604cd2dee989' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-71d1cf78-c3c7-4ac9-a6de-604cd2dee989' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f78018e4-03ed-4153-a566-7cb5a0ca4880' class='xr-var-data-in' type='checkbox'><label for='data-f78018e4-03ed-4153-a566-7cb5a0ca4880' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=object)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>plants</span></div><div class='xr-var-dims'>(product)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>&#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;fruit&#x27; &#x27;vegetable&#x27;</div><input id='attrs-a1afc24d-2146-4920-897a-8e75585d91f6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a1afc24d-2146-4920-897a-8e75585d91f6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-6b795f79-f903-4c50-8f7d-37afa9146b6e' class='xr-var-data-in' type='checkbox'><label for='data-6b795f79-f903-4c50-8f7d-37afa9146b6e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;fruit&#x27;, &#x27;vegetable&#x27;], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-48ee75a5-24e3-4053-9fab-bf495e94b4ec' class='xr-section-summary-in' type='checkbox'  ><label for='section-48ee75a5-24e3-4053-9fab-bf495e94b4ec' class='xr-section-summary' >Indexes: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>quantity</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-4dbab36f-a308-4cf9-b613-b85fdd919f20' class='xr-index-data-in' type='checkbox'/><label for='index-4dbab36f-a308-4cf9-b613-b85fdd919f20' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;1 kg&#x27;, &#x27;10 kg&#x27;], dtype=&#x27;object&#x27;, name=&#x27;quantity&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>product</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-95c0338e-0b39-4f99-922c-ced3eb27469f' class='xr-index-data-in' type='checkbox'/><label for='index-95c0338e-0b39-4f99-922c-ced3eb27469f' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([&#x27;banana&#x27;, &#x27;orange&#x27;, &#x27;apple&#x27;, &#x27;peppers&#x27;], dtype=&#x27;object&#x27;, name=&#x27;product&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-a4c5dfe0-bac5-4c1c-802d-15614a9ea897' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-a4c5dfe0-bac5-4c1c-802d-15614a9ea897' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'price' (quantity: 2, product: 4)>\n",
@@ -1553,7 +1553,7 @@
        "    plants    (product) object 'fruit' 'fruit' 'fruit' 'vegetable'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "5f07553d",
    "metadata": {
     "scrolled": false
@@ -1687,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "090ad57b",
    "metadata": {},
    "outputs": [
@@ -1739,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "a878011a",
    "metadata": {},
    "outputs": [
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "fc5c1c1f",
    "metadata": {
     "scrolled": false
@@ -1827,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "0319c881",
    "metadata": {},
    "outputs": [
